# riks-context-engine

./: .dockerignore  .env.example  .env.staging.example  .gitignore  .pre-commit-config.yaml  :memory:  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  SECURITY_REPORT.md  SPRINT-REPORT-2026-04-20.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  pr-body.md  pyproject.toml
.github/: PR_BODY.md
.github/workflows/: cd.yml  ci.yml  deploy.yml  issues.yml
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  BLOG-WHY-AI-CONTEXT-MEMORY-MATTERS.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  FEATURE-HIGHLIGHTS.md  LANDING-PAGE.md  QUICKSTART.md  SECURITY_AUDIT_DOCKER_CI.md  SOCIAL-MEDIA.md  SPRINT_BACKLOG.md  TEAM_ROLES.md  TEST_ENVIRONMENT.md  UAT_CRITERIA.md  USER_GUIDE.md  security-review-pr65.md  sprint-backlog-2026-04-20.md  test-review-pr65.md
docs/specs/: MCP_SERVER.md
scripts/: deploy.sh  quickstart.sh  staging.sh  test-staging.sh
src/riks_context_engine/: __init__.py
src/riks_context_engine/abstractions/: __init__.py  tool_calling.py
src/riks_context_engine/api/: __init__.py  server.py
src/riks_context_engine/cli/: __init__.py  main.py
src/riks_context_engine/context/: __init__.py  manager.py
src/riks_context_engine/graph/: __init__.py  knowledge_graph.py
src/riks_context_engine/mcp/: __init__.py  (+4 more)
tests/: test_api_persistence.py  test_cli_main.py  test_context.py  test_cors_patch_head.py  test_decomposer.py  test_embedding.py  test_export.py  test_graph.py  test_kg_fallback.py  test_mcp.py  test_memory.py  test_rate_limit.py  test_recall_performance.py  test_reflection.py  test_sql_injection.py  test_thread_safe_sqlite.py  test_tier_and_base.py  test_tier_manager.py  test_tool_calling.py
tests/test_api/: conftest.py  test_api.py
tests/ui/: test_ui.py
ui/: README.md  index.html
(+12 files in other folders)
