[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "riks-context-engine"
version = "0.1.0"
description = "AI context and memory management framework"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [
    {name = "vopsiton", email = "vahit@opsiton.com"}
]
requires-python = ">=3.10"
keywords = ["ai", "memory", "context", "llm", "context-window", "memory-hierarchy"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 (AGPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sqlalchemy>=2.0",
    "chromadb>=0.4.0",
    "ollama>=0.1.0",
    "httpx>=0.25.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.1",
    "ruff>=0.9",
    "mypy>=1.5",
    "pre-commit>=3.3",
]
openai = ["openai>=1.0"]
anthropic = ["anthropic>=0.18"]

[project.scripts]
riks = "riks_context_engine.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501", "B008", "B904", "UP007"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
